--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
     box-sizing: border-box;
 }
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 header {
     padding: 30px 60px;
 }
